--- a/JavaProject/.classpath
+++ b/JavaProject/.classpath
@@ -6,7 +6,7 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="C:/Users/TJ-BU-708-강사PC/Downloads/ojdbc6-11.2.0.4.jar">
+	<classpathentry kind="lib" path="C:/Users/TJ-BU-708-강사PC/Desktop/ojdbc6-11.2.0.4.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
